--- a/app/src/main/res/layout/list_item_abrechnung.xml
+++ b/app/src/main/res/layout/list_item_abrechnung.xml
@@ -1,6 +1,33 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- res/layout/list_item_abrechnung.xml -->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="16dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/textViewAbrechnungMonatJahr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Juni 2024"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/textViewAbrechnungVerbrauch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Verbrauch: 150.0 kWh (52,50 €)" />
+
+    <TextView
+        android:id="@+id/textViewAbrechnungGesamtkosten"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Gesamtkosten: 67,50 €" />
+
+    <CheckBox
+        android:id="@+id/checkBoxBezahlt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Bezahlt" />
+</LinearLayout>
