--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,4 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-  
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/action_statistics"
+        android:title="Statistik"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_statistics" /> <!-- Icon müssen wir noch erstellen -->
+    <item
+        android:id="@+id/action_settings"
+        android:title="Einstellungen"
+        app:showAsAction="never" />
 </menu>
