--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -1,4 +1,60 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</androidx.preference.PreferenceScreen>
+<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <PreferenceCategory app:title="Kosten">
+
+        <EditTextPreference
+            app:key="preis_kwh"
+            app:title="Preis pro kWh"
+            app:summary="Preis in Euro pro Kilowattstunde"
+            app:defaultValue="0.35"
+            app:dialogTitle="Preis pro kWh eingeben" />
+
+        <EditTextPreference
+            app:key="grundgebuehr"
+            app:title="Monatliche Grundgebühr"
+            app:summary="Feste Gebühr pro Person pro Monat"
+            app:defaultValue="15.00"
+            app:dialogTitle="Grundgebühr eingeben" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory app:title="Personen">
+
+        <EditTextPreference
+            app:key="person_1_name"
+            app:title="Person 1 Name"
+            app:summary="Name für Person 1"
+            app:defaultValue="Person 1"
+            app:dialogTitle="Namen für Person 1 eingeben" />
+
+        <EditTextPreference
+            app:key="person_2_name"
+            app:title="Person 2 Name"
+            app:summary="Name für Person 2"
+            app:defaultValue="Person 2"
+            app:dialogTitle="Namen für Person 2 eingeben" />
+
+        <EditTextPreference
+            app:key="person_3_name"
+            app:title="Person 3 Name"
+            app:summary="Name für Person 3"
+            app:defaultValue="Person 3"
+            app:dialogTitle="Namen für Person 3 eingeben" />
+
+        <EditTextPreference
+            app:key="person_4_name"
+            app:title="Person 4 Name"
+            app:summary="Name für Person 4"
+            app:defaultValue="Person 4"
+            app:dialogTitle="Namen für Person 4 eingeben" />
+
+        <EditTextPreference
+            app:key="person_5_name"
+            app:title="Person 5 Name"
+            app:summary="Name für Person 5 (Fixkosten)"
+            app:defaultValue="Person 5 (Fixkosten)"
+            app:dialogTitle="Namen für Person 5 eingeben" />
+
+    </PreferenceCategory>
+
+</PreferenceScreen>
