--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -7,4 +8,30 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="md_theme_primary">#7B5800</color>
+    <color name="md_theme_onPrimary">#FFFFFF</color>
+    <color name="md_theme_primaryContainer">#FFDEA8</color>
+    <color name="md_theme_onPrimaryContainer">#271900</color>
+    <color name="md_theme_secondary">#6D5D3F</color>
+    <color name="md_theme_onSecondary">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer">#F8E0BB</color>
+    <color name="md_theme_onSecondaryContainer">#251A04</color>
+    <color name="md_theme_tertiary">#4C6544</color>
+    <color name="md_theme_onTertiary">#FFFFFF</color>
+
+
+    <color name="md_theme_error">#BA1A1A</color>
+    <color name="md_theme_onError">#FFFFFF</color>
+    <color name="md_theme_background">#FFFBFF</color>
+    <color name="md_theme_onBackground">#1F1B16</color>
+    <color name="md_theme_surface">#FFFBFF</color>
+    <color name="md_theme_onSurface">#1F1B16</color>
+    <color name="md_theme_surfaceVariant">#EDE1CF</color>
+    <color name="md_theme_onSurfaceVariant">#4D4639</color>
+    <color name="md_theme_outline">#7F7667</color>
+
+
+    <color name="green_text">#388E3C</color>
+    <color name="red_text">#D32F2F</color>
 </resources>
